fix: change gap

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -68,7 +68,7 @@ main {
   align-items: center;
   min-width: var(--min-width-mob);
   width: 100vw;
-  gap: 40px;
+  gap: 62px;
   padding-right: 17px;
   padding-left: 17px;
   height: fit-content;
@@ -90,7 +90,7 @@ h3 {
     width: 100vw;
     padding-left: 59px;
     padding-right: 59px;
-    gap: 60px;
+    gap: 74px;
   }
 }
 
@@ -100,7 +100,7 @@ h3 {
     padding-bottom: 0;
     margin-top: 0;
     margin-bottom: 100px;
-    gap: 100px;
+    gap: 121px;
   }
 
   h1 {
